--- a/Table_Extraction/Map_User.ipynb
+++ b/Table_Extraction/Map_User.ipynb
@@ -509,7 +509,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-     
+      "C:\\Users\\Adhiran\\AppData\\Local\\Temp\\ipykernel_17148\\2009618244.py:13: UserWarning: The provided table name 'Map_User' is not found exactly as such in the database after writing the table, possibly due to case sensitivity issues. Consider using lower case table names.\n",
+      "  map_user_cleaned.to_sql(name='Map_User', con=engine, if_exists='replace', index=False)\n"
      ]
     },
     {
