--- a/Table_Extraction/Map_User1.ipynb
+++ b/Table_Extraction/Map_User1.ipynb
@@ -695,7 +695,7 @@
     "# Create SQLAlchemy engine\n",
     "engine = create_engine(f\"mysql+pymysql://{\"root\"}:{\"root\"}@{host}:{3306}/{\"phonepe\"}\")\n",
     "\n",
-    "map_user_cleaned.to_sql(name='Map_User', con=engine, if_exists='replace', index=False)\n",
+    "map_user_cleaned.to_sql(name='Map_User1', con=engine, if_exists='replace', index=False)\n",
     "map_user_cleaned    "
    ]
   }
